prevent footer from overlapping final Album card.

--- a/src/app/marketplace/marketplace.component.css
+++ b/src/app/marketplace/marketplace.component.css
@@ -5,3 +5,7 @@
 h3:hover {
   cursor: pointer;
 }
+
+.marketplace-container:last-child {
+  padding-bottom: 5%;
+}
